--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,29 @@ img {
     text-align: center;
 }
 
+a:focus {
+    outline: 3px solid #000;
+}
+.skip-links {
+    margin:0;
+    padding:0;
+    list-style-type: none;
+}
+
+.skip-links a {
+    position: absolute;
+    top: -3em;
+    background-color: #000;
+    color: #fff;
+    padding: 0.5em 075em;
+    font-weight: bold;
+    text-align: none;
+}
+
+.skip-links a:focus {
+    top: 0;
+}
+
 .masthead {
     background-color: #ccc;
     overflow: hidden;
